APP-559 Introduced unit tests and basic scheduling code from platform api code.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "app55/app55-php",
+    "type": "library",
     "description": "App55 API Client for PHP",
     "minimum-stability": "stable",
 	"homepage": "http://docs.app55.com/api/php",
